--- a/stability_of_eta.ipynb
+++ b/stability_of_eta.ipynb
@@ -29,71 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1.141012133832329,\n",
-       " 1.141012130390594,\n",
-       " 1.1410121302711973,\n",
-       " 1.1410121137887403,\n",
-       " 1.1410121299490639,\n",
-       " 1.1410121207070538,\n",
-       " 1.1410121302180012,\n",
-       " 1.1410121290460888,\n",
-       " 1.1410121301490495,\n",
-       " 1.1410121302086962,\n",
-       " 1.141012129703541,\n",
-       " 1.1410121302145324,\n",
-       " 1.1410121293183533,\n",
-       " 1.1410121298763982,\n",
-       " 1.141012138542488,\n",
-       " 1.1410121332892744,\n",
-       " 1.1410121301981173,\n",
-       " 1.1410121302136378,\n",
-       " 1.1410121302177316,\n",
-       " 1.1410121298659783,\n",
-       " 1.1410121242947215,\n",
-       " 1.141012130239793,\n",
-       " 1.1410121305383698,\n",
-       " 1.141012123041175,\n",
-       " 1.1410121301862397,\n",
-       " 1.1410121301608154,\n",
-       " 1.1410121301829008,\n",
-       " 1.1410121290911597,\n",
-       " 1.14101212806829,\n",
-       " 1.141012129537877,\n",
-       " 1.1410121306611896,\n",
-       " 1.141012130022045,\n",
-       " 1.141012130184279,\n",
-       " 1.1410121293933446,\n",
-       " 1.1410121302535303,\n",
-       " 1.14101213008367,\n",
-       " 1.1410121182332453,\n",
-       " 1.1410121293325795,\n",
-       " 1.1410121225697656,\n",
-       " 1.1410121304361778,\n",
-       " 1.1410121302294012,\n",
-       " 1.1410121302257588,\n",
-       " 1.141012109884544,\n",
-       " 1.1410121339603734,\n",
-       " 1.1410121303177334,\n",
-       " 1.1410121302173546,\n",
-       " 1.141012130262544,\n",
-       " 1.1410121302162841,\n",
-       " 1.1410121302142664,\n",
-       " 1.1410121017199926]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data size:  50\n",
+      "Min:  1.1410121017199926\n",
+      "Max:  1.141012138542488\n",
+      "Max - Min:  3.6822495497190744e-08\n"
+     ]
     }
    ],
    "source": [
-    "etas"
+    "print(\"Data size: \", len(etas))\n",
+    "print(\"Min: \", min(etas))\n",
+    "print(\"Max: \", max(etas))\n",
+    "print(\"Max - Min: \", max(etas) - min(etas))"
    ]
   },
   {
