Update Characterization of Moment Matrices Sets in the 322 Scenario.ipynb

--- a/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
+++ b/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,13 @@
    "metadata": {},
    "source": [
     "## Dim = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With sequences of length 2 only"
    ]
   },
   {
@@ -104,7 +111,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### All sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "dim = 2\n",
+    "num_obs = 3\n",
+    "len_seq = 2\n",
+    "out_max = 1\n",
+    "seq_method = \"all_sequences\"\n",
+    "remove_last_out = True\n",
+    "batch_init = 100\n",
+    "level = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing the multiprocessing\n",
+    "CPUs = multiprocessing.cpu_count()\n",
+    "input = [(dim, num_obs, len_seq, out_max, seq_method, [len_seq + level -1], remove_last_out)]\n",
+    "pool = multiprocessing.Pool(processes = CPUs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 13)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute a basis\n",
+    "X_basis = pool.starmap(rand_moment, input*batch_init)\n",
+    "X_basis[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute rank\n",
+    "rank = rank_basis(X_basis)\n",
+    "rank"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dim = 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With sequences of length 2 only"
    ]
   },
   {
@@ -170,6 +264,86 @@
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute rank\n",
+    "rank = rank_basis(X_basis)\n",
+    "rank"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With all sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "dim = 3\n",
+    "num_obs = 3\n",
+    "len_seq = 2\n",
+    "out_max = 1\n",
+    "seq_method = \"all_sequences\"\n",
+    "remove_last_out = True\n",
+    "batch_init = 100\n",
+    "level = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing the multiprocessing\n",
+    "CPUs = multiprocessing.cpu_count()\n",
+    "input = [(dim, num_obs, len_seq, out_max, seq_method, [len_seq + level -1], remove_last_out)]\n",
+    "pool = multiprocessing.Pool(processes = CPUs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 13)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute a basis\n",
+    "X_basis = pool.starmap(rand_moment, input*batch_init)\n",
+    "X_basis[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
