--- a/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
+++ b/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,13 @@
     "out_max = 1\n",
     "seq_method = \"sel_sequences\"\n",
     "remove_last_out = True\n",
-    "batch_init = 100\n",
+    "batch_init = 40\n",
     "level = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "(10, 10)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28"
+       "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +105,45 @@
     "# Compute rank\n",
     "rank = rank_basis(X_basis)\n",
     "rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_basis[0] == X_basis[1]"
    ]
   },
   {
@@ -173,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "28"
+       "9"
       ]
      },
      "execution_count": 9,
@@ -460,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
