--- a/Testing Gram-Schmidt.ipynb
+++ b/Testing Gram-Schmidt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,51 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "dim = 2\n",
-    "num_obs = 3\n",
+    "dim = 3\n",
+    "num_obs = 4\n",
     "len_seq = 2\n",
     "out_max = 1\n",
     "seq_method = \"sel_sequences\"\n",
     "remove_last_out = True\n",
-    "batch_size = 40\n",
+    "batch_size = 200\n",
     "level = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 10)"
-      ]
-     },
-     "execution_count": 258,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Preparing the multiprocessing\n",
-    "CPUs = multiprocessing.cpu_count()\n",
-    "input = [(dim, num_obs, len_seq, out_max, seq_method, [len_seq + level -1], remove_last_out)]\n",
-    "pool = multiprocessing.Pool(processes = CPUs)\n",
-    "\n",
-    "# Compute a basis\n",
-    "X_basis = pool.starmap(rand_moment, input*batch_init)\n",
-    "X_basis[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +51,7 @@
        "35"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,138 +64,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def gram_schmidt(X_basis):\n",
-    "#     X = X_basis\n",
-    "#     X[0] = X[0]/LA.norm(X[0])\n",
-    "#     for j in range(1,len(X)):\n",
-    "#         X[j] = X[j] - np.sum([X[k] for k in range(j)])\n",
-    "#         X[j] = X[j] / LA.norm(X[j])\n",
-    "#         print(LA.norm(X[j]))\n",
-    "#         if (LA.norm(X[j])<0.99) or (LA.norm(X[j])>1.01):\n",
-    "#             print(j)\n",
-    "#             flag = j\n",
-    "#             return X[:j]\n",
-    "#     return X\n",
-    "\n",
     "def gram_schmidt(X_basis):\n",
     "    X = X_basis\n",
     "    X[0] = X[0]/LA.norm(X[0])\n",
     "    for j in range(1,len(X)):\n",
-    "        X[j] -= np.sum([X[k] for k in range(j)])\n",
-    "        print(LA.norm(X[j]))\n",
-    "        X[j] = X[j] / LA.norm(X[j])\n",
-    "        print(LA.norm(X[j]))\n",
-    "#         print(j)\n",
-    "#         print(LA.norm(X[j]))\n",
-    "#         if (LA.norm(X[j])==\"nan\") or (LA.norm(X[j])==0):\n",
-    "#             print(j)\n",
+    "        for k in range(j):\n",
+    "            X[j] -= X[k]*np.sum(X[k]*np.conjugate(X[j]))\n",
+    "        #print(LA.norm(np.sum([sum(X[k]*np.conjugate(X[j])) for k in range(j)])))\n",
+    "        #print(LA.norm(X[j]))\n",
+    "        if LA.norm(X[j]) < 0.000001:\n",
+    "            print(\"Nul matrix found\")\n",
+    "            return X[:j]\n",
+    "        else:\n",
+    "            X[j] = X[j]/LA.norm(X[j])\n",
+    "    print(\"Matrices all proccessed\")\n",
     "    return X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 255,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nul matrix found\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_gs = gram_schmidt(X_basis)\n",
+    "len(X_gs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.646594830114054\n",
-      "1.0\n",
-      "44.35340516988572\n",
-      "1.0\n",
-      "57.646594830114054\n",
-      "1.0\n",
-      "44.35340516988578\n",
-      "0.9999999999999999\n",
-      "57.64659483011403\n",
-      "1.0\n",
-      "44.353405169885825\n",
-      "0.9999999999999999\n",
-      "57.64659483011402\n",
-      "1.0\n",
-      "44.35340516988583\n",
-      "0.9999999999999999\n",
-      "57.64659483011401\n",
-      "0.9999999999999999\n",
-      "44.35340516988578\n",
-      "1.0\n",
-      "57.646594830114\n",
-      "0.9999999999999998\n",
-      "44.35340516988579\n",
-      "1.0\n",
-      "57.64659483011396\n",
-      "1.0000000000000002\n",
-      "44.35340516988578\n",
-      "0.9999999999999999\n",
-      "57.64659483011397\n",
-      "0.9999999999999999\n",
-      "44.35340516988584\n",
-      "0.9999999999999999\n",
-      "57.64659483011399\n",
-      "1.0\n",
-      "44.35340516988588\n",
-      "1.0\n",
-      "57.646594830113976\n",
-      "0.9999999999999998\n",
-      "44.353405169885896\n",
-      "0.9999999999999999\n",
-      "57.646594830113955\n",
-      "1.0\n",
-      "44.35340516988586\n",
-      "1.0\n",
-      "57.646594830113926\n",
-      "1.0\n",
-      "44.35340516988586\n",
-      "0.9999999999999999\n",
-      "57.64659483011391\n",
-      "0.9999999999999999\n",
-      "44.35340516988591\n",
-      "1.0\n",
-      "57.64659483011397\n",
-      "1.0\n",
-      "44.35340516988585\n",
-      "0.9999999999999998\n",
-      "57.64659483011397\n",
-      "1.0\n",
-      "44.35340516988577\n",
-      "1.0000000000000002\n",
-      "57.646594830113884\n",
-      "0.9999999999999999\n",
-      "44.35340516988574\n",
-      "1.0\n",
-      "57.64659483011395\n",
-      "1.0\n",
-      "44.3534051698859\n",
-      "1.0\n",
-      "57.64659483011392\n",
-      "0.9999999999999999\n",
-      "44.35340516988581\n",
-      "1.0\n",
-      "57.64659483011388\n",
-      "1.0\n",
-      "44.35340516988585\n",
-      "1.0\n",
-      "57.64659483011384\n",
-      "1.0\n"
+      "Nul matrix found\n",
+      "Number of LI moment matrices:  161\n"
      ]
     }
    ],
    "source": [
-    "X_gs = gram_schmidt(X_basis)"
+    "# Parameters\n",
+    "dim = 3\n",
+    "num_obs = 4\n",
+    "len_seq = 2\n",
+    "out_max = 1\n",
+    "seq_method = \"sel_sequences\"\n",
+    "remove_last_out = True\n",
+    "level = 1\n",
+    "\n",
+    "flag = False\n",
+    "count = 1\n",
+    "stop = 10000\n",
+    "norm_sens = 0.000000001\n",
+    "\n",
+    "X_basis = []\n",
+    "\n",
+    "# Initialization\n",
+    "X = rand_moment(dim, num_obs, len_seq, out_max, seq_method=seq_method, sel_sequences=[len_seq], \n",
+    "                remove_last_out=remove_last_out)\n",
+    "X = X/LA.norm(X)\n",
+    "X_basis.append(X)\n",
+    "\n",
+    "while flag==False:\n",
+    "    X = rand_moment(dim, num_obs, len_seq, out_max, seq_method=seq_method, sel_sequences=[len_seq], \n",
+    "                remove_last_out=remove_last_out)\n",
+    "    for k in range(len(X_basis)):\n",
+    "        X -= X_basis[k]*np.sum(X_basis[k]*np.conjugate(X))\n",
+    "    if LA.norm(X) < norm_sens:\n",
+    "        print(\"Nul matrix found\")\n",
+    "        print(\"Number of LI moment matrices: \", len(X_basis))\n",
+    "        flag=True\n",
+    "    else:\n",
+    "        X = X/LA.norm(X)\n",
+    "        X_basis.append(X)\n",
+    "        count+=1\n",
+    "    if count > stop:\n",
+    "        print(\"Cannot find the basis\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -248,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
