new mtheod for data

--- a/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
+++ b/Characterization of Moment Matrices Sets in the 322 Scenario.ipynb
@@ -60,7 +60,10 @@
     "# Preparing the multiprocessing\n",
     "CPUs = multiprocessing.cpu_count()\n",
     "input = [(dim, num_obs, len_seq, out_max, seq_method, [len_seq + level -1], remove_last_out)]\n",
-    "pool = multiprocessing.Pool(processes = CPUs)"
+    "pool = multiprocessing.Pool(processes = CPUs)\n",
+    "# Compute a basis\n",
+    "X_basis = pool.starmap(rand_moment, input*batch_init)\n",
+    "X_basis[0].shape"
    ]
   },
   {
