--- a/Testing Gram-Schmidt.ipynb
+++ b/Testing Gram-Schmidt.ipynb
@@ -174,6 +174,130 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "dim = 3\n",
+    "num_obs = 4\n",
+    "len_seq = 2\n",
+    "out_max = 1\n",
+    "seq_method = \"sel_sequences\"\n",
+    "remove_last_out = True\n",
+    "level = 1\n",
+    "\n",
+    "flag = False\n",
+    "count = 1\n",
+    "stop = 10000\n",
+    "norm_sens = 0.000000001\n",
+    "\n",
+    "X_basis = []\n",
+    "\n",
+    "# Initialization\n",
+    "X = rand_moment(dim, num_obs, len_seq, out_max, seq_method=seq_method, sel_sequences=[len_seq], \n",
+    "                remove_last_out=remove_last_out)\n",
+    "X = X/LA.norm(X)\n",
+    "X_basis.append(X)\n",
+    "\n",
+    "while flag==False:\n",
+    "    X = rand_moment(dim, num_obs, len_seq, out_max, seq_method=seq_method, sel_sequences=[len_seq], \n",
+    "                remove_last_out=remove_last_out)\n",
+    "    for k in range(len(X_basis)):\n",
+    "        X -= X_basis[k]*np.sum(X_basis[k]*np.conjugate(X))\n",
+    "    if LA.norm(X) < norm_sens:\n",
+    "        print(\"Nul matrix found\")\n",
+    "        print(\"Number of LI moment matrices: \", len(X_basis))\n",
+    "        flag=True\n",
+    "    else:\n",
+    "        X = X/LA.norm(X)\n",
+    "        X_basis.append(X)\n",
+    "        count+=1\n",
+    "    if count > stop:\n",
+    "        print(\"Cannot find the basis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preparing the multiprocessing\n",
+    "CPUs = multiprocessing.cpu_count()\n",
+    "input = [(dim, num_obs, len_seq, out_max, seq_method, [len_seq + level -1], remove_last_out)]\n",
+    "pool = multiprocessing.Pool(processes = CPUs)\n",
+    "# Compute a basis\n",
+    "X_basis = pool.starmap(rand_moment, input*CPUs)\n",
+    "len(X_basis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True, False,  True, False, False, False, False, False,\n",
+       "         True, False,  True, False, False, False, False, False],\n",
+       "       [ True,  True, False,  True, False, False, False, False, False,\n",
+       "         True, False,  True, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [ True,  True, False,  True, False, False, False, False, False,\n",
+       "         True, False,  True, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [ True,  True, False,  True, False, False, False, False, False,\n",
+       "         True, False,  True, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [ True,  True, False,  True, False, False, False, False, False,\n",
+       "         True, False,  True, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_basis[0] == X_basis[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
