--- a/public/Scenario_Classification_by_Basis_Cardinal.ipynb
+++ b/public/Scenario_Classification_by_Basis_Cardinal.ipynb
@@ -19,31 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'321': {'ranks': [35, 46, 46, 46], 'dimension': [2, 3, 4, 5]},\n",
-       " '231': {'ranks': [13, 13, 13, 13], 'dimension': [2, 3, 4, 5]},\n",
-       " '331': {'ranks': [84, 190, 190, 190], 'dimension': [2, 3, 4, 5]},\n",
-       " '221': {'ranks': [9, 9, 9, 9], 'dimension': [2, 3, 4, 5]},\n",
-       " '621': {'ranks': [252, 937, 937, 937], 'dimension': [2, 3, 4, 5]},\n",
-       " '521': {'ranks': [241, 426, 426, 426], 'dimension': [2, 3, 4, 5]},\n",
-       " '531': {'ranks': [500, 6826, 6826, 6826], 'dimension': [2, 3, 4, 5]},\n",
-       " '322': {'ranks': [420, 511, 511], 'dimension': [3, 4, 5]},\n",
-       " '222': {'ranks': [61, 61, 61], 'dimension': [3, 4, 5]},\n",
-       " '421': {'ranks': [102, 161, 161, 161], 'dimension': [2, 3, 4, 5]},\n",
-       " '522': {'ranks': [336, 5851, 5851], 'dimension': [3, 4, 5]},\n",
-       " '431': {'ranks': [382, 1457, 1457, 1457], 'dimension': [2, 3, 4, 5]},\n",
-       " '422': {'ranks': [168, 2073, 2073], 'dimension': [3, 4, 5]},\n",
-       " '232': {'ranks': [206, 253, 253], 'dimension': [3, 4, 5]}}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'rank'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-70d5ede0a597>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data_basis/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_ranks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Research/Github/Bounding-the-dimension-of-quantum-systems-with-sequential-measurements/public/analytics.py\u001b[0m in \u001b[0;36mparse_ranks\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     41\u001b[0m                 \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMSO\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dimension\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m             \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMSO\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ranks\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_temp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"rank\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m             \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMSO\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dimension\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_temp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dimension\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'rank'"
+     ]
     }
    ],
    "source": [
